<resources>

    <!-- General -->
    <string name="app_name">ProjetMobile</string>

    <!-- Menu -->
    <string name="title_home">Acceuil</string>
    <string name="title_material">Matériel</string>
    <string name="title_account">Compte</string>

    <!-- Login -->
    <string name="account_login">CONNEXION</string>
    <string name="account_newAccount">Pas encore de compte ?</string>
    <string name="account_newAccountButton">Inscris Toi !</string>
    <string name="account_connectButton">Se connecter</string>
    <string name="account_account_checkbox">Se souvenir de moi</string>
    <string name="account_loginEmail">Email</string>
    <string name="account_loginPwd">Mot de passe</string>

    <!-- Register -->
    <string name="account_register">INSCRIPTION</string>
    <string name="account_existingAccount">Déjà inscrit ?</string>
    <string name="account_existingAccountButton">Connecte Toi !</string>
    <string name="account_registerButton">S\'inscrire</string>
    <string name="account_loginFirstName">Prénom</string>
    <string name="account_loginLastName">Nom</string>
    <string name="account_pwdConfirm">Confirmer le mot de passe</string>

    <!-- Home -->
    <string name="home_hello">Bonjour Maickel</string>
    <string name="home_give_button">Emprunt</string>
    <string name="home_give_back_button">Remise</string>
    <string name="home_add_button">Ajouter un article</string>
    <string name="home_stat">Statistiques</string>
    <string name="home_loaned_items">Article(s)\n en prêt</string>
    <string name="home_created_user">Utilisateur(s) enregistré(s)</string>
    <string name="home_logout_button">Déconnexion</string>

    <!-- Material -->
    <string name="material_title">Gestion de l\'inventaire</string>
    <string name="material_edit_button">Modidier</string>
    <string name="material_delete_button">Supprimer</string>
    <string name="material_item_name">Article 1</string>
    <string name="material_sort_by">Trier par</string>
    <string name="material_available">Disponible</string>
    <string name="material_unavailable">En prêt</string>

    <!-- Account -->
    <string name="account_title">Gestion des utilisateurs</string>

</resources>