<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.material.MaterialFragment">

    <TextView
        android:id="@+id/textHelloName"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/material_title"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textSortBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/material_sort_by"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/button_homeAvailable"
            android:textOn="Disponible"
            android:textOff="Disponible"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:background="@drawable/toggle_selector"
            android:text="@string/material_available"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ToggleButton
            android:textOn="Non disponible"
            android:textOff="Non disponible"
            android:id="@+id/button_homeNotAvailable"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="2"
            android:background="@drawable/toggle_selector"
            android:text="@string/material_unavailable"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="20dp"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"/>
</LinearLayout>
