<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/blue_rounded_corners"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-80dp"
        android:text="Maickel"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textUserFunction"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:text="Super Admin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/textHelloName"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:text="@string/home_hello"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/button_homeGiveButton"
            android:backgroundTint="#03A9F4"
            android:drawableLeft="@drawable/ic_qr_code_scanner_24"
            android:text="@string/home_give_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            />

        <Button
            android:id="@+id/button_homeGiveBackButton"
            android:backgroundTint="#03A9F4"
            android:drawableLeft="@drawable/ic_qr_code_scanner_24"
            android:text="@string/home_give_back_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_homeAddButton"
        android:text="@string/home_add_button"
        android:drawableLeft="@drawable/ic_add_24"
        android:backgroundTint="#03A9F4"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/textStat"
        android:layout_width="218dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_stat"
        android:textSize="25sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp" >

        <!-- Première paire d'image et de texte -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:background="@drawable/blue_rounded_corners"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/home_loaned_items"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:layout_marginTop="70dp"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- Deuxième paire d'image et de texte -->
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:background="@drawable/blue_rounded_corners"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_created_user"
                android:textAllCaps="true"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="70dp"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>


    <Button
        android:id="@+id/button_homeDeleteButton"
        android:text="@string/home_logout_button"
        android:backgroundTint="#EF2626"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</LinearLayout>
