<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <ImageView
                android:background="@drawable/border_rounded_corners"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp" />

            <ImageView
                android:background="@drawable/ic_smartphone_white"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/materialNameText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="165dp"
                android:text="@string/material_item_name"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold"
                android:gravity="center_vertical" />

            <ImageButton
                android:id="@+id/checkButton1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="105dp"
                android:background="@android:color/transparent"
                android:src="@drawable/baseline_check_box_24"
                android:contentDescription="@string/material_available" />

            <ImageButton
                android:id="@+id/editButton1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="60dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_edit_black"
                android:contentDescription="@string/material_edit_button" />
            <ImageButton
                android:id="@+id/trashButton1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="20dp"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_trash_black"
                android:gravity="center_vertical"
                android:contentDescription="@string/material_delete_button" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>